--- a/demo/rebateList.html
+++ b/demo/rebateList.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="font-size: 75px">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="main.css">
+<!--
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+-->
 </head>
 <body>
 <div class="rebateListContainer">
@@ -42,7 +45,6 @@
         </div>
     </div>
 </div>
-
 <script src="flexible.js"></script>
 </body>
 </html>
