--- a/newYearGame.html
+++ b/newYearGame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>kupao</title>
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/newYearGame.css" rel="stylesheet">
 </head>
 <body>
 <div id="view_game">
