--- a/newYearH5.html
+++ b/newYearH5.html
@@ -8,25 +8,41 @@
 <body>
 <div class="newYearWrap">
     <div class="part part1">
-        <img src="img/h5/newYearH5_01.jpg">
+
     </div>
     <div class="part part2">
-        <img src="img/h5/newYearH5_02.jpg">
+
     </div>
     <div class="part part3">
-        <img src="img/h5/newYearH5_03.jpg">
+
     </div>
     <div class="part part4">
-        <img src="img/h5/newYearH5_04.jpg">
+        <a class="phone theme">
+            <img src="img/h5/phone_03.png">
+        </a>
+        <a class="ktv theme">
+            <img src="img/h5/ktv_03.png">
+        </a>
+        <a class="holiday theme">
+            <img src="img/h5/holiday_03.png">
+        </a>
     </div>
     <div class="part part5">
-        <img src="img/h5/newYearH5_05.jpg">
+
     </div>
     <div class="part part6">
-        <img src="img/h5/newYearH5_06.jpg">
+        <a class="food theme">
+            <img src="img/h5/food_03.png">
+        </a>
+        <a class="health theme">
+            <img src="img/h5/health_03.png">
+        </a>
+        <a class="beauty theme">
+            <img src="img/h5/beauty_03.png">
+        </a>
     </div>
     <div class="part part7">
-        <img src="img/h5/newYearH5_07.jpg">
+
     </div>
 </div>
 <script src="js/flexible.js"></script>
