--- a/newYearGame.html
+++ b/newYearGame.html
@@ -21,8 +21,45 @@
     </div>
     <canvas id="canvas"></canvas>
 </div>
-<div id="pop_container">
-
+<div id="gamePopContainer" class="popContainer">
+    <div class="successPop successOrFail">
+        <p class="text">本次顺利跨越<span class="num red">10</span>个障碍，积分<span class="score red">100</span>分</p>
+        <ul class="couponBags">
+            <li class="couponBag"></li>
+            <li class="couponBag"></li>
+            <li class="couponBag"></li>
+        </ul>
+        <div class="close"></div>
+    </div>
+    <div class="failPop successOrFail">
+        <div class="text">
+            <p >本次积分<span class="num red">10</span>分</p>
+            <p >积分达到<span class="score red">50</span>分才可参与抽奖</p>
+        </div>
+        <div class="buttonsArea">
+            <a class="share" href=""></a>
+            <a class="playAgain" href=""></a>
+        </div>
+        <div class="close"></div>
+    </div>
+</div>
+<div id="resultPopContainer" class="popContainer">
+        <div class="getCouponPop resultPop">
+        <div class="text">
+            <p>您已经获得<span class="couponMoneyNum red">3</span>元满减券<span class="red">1</span>张</p>
+            <p>详情查询<a href="" class="red">"我的抵用券"</a></p>
+        </div>
+        <a href="" class="share"></a>
+        <div class="close"></div>
+    </div>
+    <div class="noCouponPop resultPop">
+        <div class="text">
+            <p>很遗憾，未中奖</p>
+            <p class="red noCouponHint">分享给好友可增加中奖几率哦</p>
+        </div>
+        <a class="share"></a>
+        <div class="close"></div>
+    </div>
 </div>
 
 <script src="js/flexible.js"></script>
