画人的阴影 1、代码精简 2、碰撞检测的边界条件 3、跳起后的人于阴影的重合

--- a/newYearH5.html
+++ b/newYearH5.html
@@ -24,7 +24,7 @@
     </div>
     <div class="part part2">
         <div class="rule"></div>
-        <a href="" class="toGame">
+        <a href="newYearGame.html" class="toGame">
             <div class="toGameText"></div>
             <div class="toGameChild"></div>
         </a>
@@ -72,7 +72,7 @@
         bind:function () {
             var $rule = $('.rele');
             var $themes = $('.theme');
-            var windowH = $(window).height()
+            var windowH = $(window).height();
             $(window).on('scroll',function () {
                 var scrollTop = $(window).scrollTop();
                 $themes.each(function (key,value) {
