问题： 1、挡住上一个

--- a/newYearGame.html
+++ b/newYearGame.html
@@ -33,8 +33,8 @@
     </div>
     <div class="failPop successOrFail">
         <div class="text">
-            <p >本次积分<span class="num red">10</span>分</p>
-            <p >积分达到<span class="score red">50</span>分才可参与抽奖</p>
+            <p >本次积分<span class="score red">10</span>分</p>
+            <p >积分达到<span class="red">50</span>分才可参与抽奖</p>
         </div>
         <div class="buttonsArea">
             <a class="share" href=""></a>
